14-kyvern/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-runAsNonRoot
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Root? Nao eh permitido"
        pattern:
          spec:
            containers:
              - securityContext:
                runAsNonRoot: true
