14-kyvern/resorce-limit-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources-limit
spec:
  validationFailureAction: Enforce
  rules:
    - name: validate-limit
      match:
        resources:
          kinds: 
          - Pod
      validate:
        message: "Defina o limite de recursos"
        pattern: 
          spec:
            containers:
              - name: "*"
                resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
